force-app/main/default/objects/Appointment__c/fields/Appointment_status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_status__c</fullName>
    <label>Appointment_status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled, Completed, Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>