force-app/main/default/objects/Appointment__c/fields/Appointment_status_c__c.field-meta.xml
<CustomField>
    <fullName>Appointment_status_c__c</fullName>
    <label>Appointment_status_c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>