force-app/main/default/objects/Appointment__c/recordTypes/Consultation.recordType-meta.xml
<RecordType>
    <fullName>Consultation</fullName>
    <active>true</active>
    <description>Appointment for consultation</description>
    <label>Consultation</label>
</RecordType>