force-app/main/default/objects/Appointment__c/recordTypes/Follow_up.recordType-meta.xml
<RecordType>
    <fullName>Follow_up</fullName>
    <active>true</active>
    <description>Follow-up appointments</description>
    <label>Follow_up</label>
</RecordType>