force-app/main/default/objects/Appointment__c/validationRules/Validate_Appointment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Appointment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Appointment_Date__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Appointment_Date__c</errorDisplayField>
    <errorMessage>Appointment date cannot be in the past</errorMessage>
</ValidationRule>