force-app/main/default/objects/Appointment__c/validationRules/Validate_Appointment_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Appointment_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Cancelled&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be blank</errorMessage>
</ValidationRule>